force-app/main/default/objects/AgileRelease__c/AgileRelease__c.object-meta.xml
<CustomObject>
    <label>Release</label>
    <nameField>
        <label>Nome de Release</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>