force-app/main/default/objects/AgileRelease__c/fields/PostReleaseComments__c.field-meta.xml
<CustomField>
    <fullName>PostReleaseComments__c</fullName>
    <label>Comentários pós release</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>