force-app/main/default/objects/AgileRelease__c/fields/ReleaseCategory__c.field-meta.xml
<CustomField>
    <fullName>ReleaseCategory__c</fullName>
    <inlineHelpText>Utilize para classificar as works do projeto dentro da Release.</inlineHelpText>
    <label>Categoria da Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Hot-fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>