force-app/main/default/objects/AgileRelease__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <label>Data da release</label>
    <type>Date</type>
</CustomField>