force-app/main/default/objects/AgileRelease__c/fields/ReleaseGoal__c.field-meta.xml
<CustomField>
    <fullName>ReleaseGoal__c</fullName>
    <label>Objetivo da Release</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>