force-app/main/default/objects/AgileRelease__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time</label>
    <referenceTo>AgileTeam__c</referenceTo>
    <relationshipLabel>Releases do Time</relationshipLabel>
    <relationshipName>TeamReleases</relationshipName>
    <type>Lookup</type>
</CustomField>