force-app/main/default/objects/AgileRelease__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team__c</columns>
    <columns>ReleaseDate__c</columns>
    <columns>ReleaseCategory__c</columns>
    <columns>ReleaseGoal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>